updated config and config parser; added logging facility including emailing upon errors; other misc changes

--- a/namecheap.example.cfg
+++ b/namecheap.example.cfg
@@ -3,6 +3,15 @@
 # password = namecheap dyndns password
 # ip = ip address or check to get public ip
 
+[general]
+syslog = 1
+logfile = /var/log/namecheap-dyndns.log
+email_server = mail.mayfirst.org
+email_from = test@example.com
+email_to = test@example.com
+email_user = myusername
+email_pw = terriblepassword
+
 [self.com]
 hosts = @, www, *
 password = 00000000000000000000000000000000
